# copperspice-debian12

./: README.md
src/: CMakeLists.txt
src/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
